Replace SourceLocation by IPath
The value of the field 'userDefined' was not used and without it the
SourceLocation is basically just an IPath.